--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -6,6 +6,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <script type="text/javascript" >
+      ENV = {
+          CP_DEFAULT_CACHEABLE: true,
+          VIEW_PRESERVES_CONTEXT: true
+      };
+  </script>
   <%= javascript_include_tag "application" %>
 </body>
 </html>
