--- a/app/views/assets/index.html.erb
+++ b/app/views/assets/index.html.erb
@@ -14,9 +14,9 @@
 </head>
 <body>
 
-  <script type="text/x-handlebars">
+  <!-- <script type="text/x-handlebars">
     {{ view GithubScore.ApplicationView }}
-  </script>
+  </script> -->
 
   <%= yield %>
 
