--- a/app/assets/javascripts/app/templates/navbar.handlebars
+++ b/app/assets/javascripts/app/templates/navbar.handlebars
@@ -1,4 +1,5 @@
 <ul>
   <li><a {{action goHome}}>Home</a></li>
   <li><a {{action viewProfile}}>My Profile</a></li>
+  <li><a {{action viewEvents}}>Events</a></li>
 </ul>
