updating the app

--- a/app/assets/javascripts/app/templates/main.handlebars
+++ b/app/assets/javascripts/app/templates/main.handlebars
@@ -11,7 +11,7 @@
   {{/if}}
   <ul>
   {{#each controller}}
-    <li>{{url}}: {{eventType}}</li>
+    <li>{{id}} - {{url}}: {{eventType}}</li>
   {{/each}}
   </ul>
 {{else}}
